--- a/index.html
+++ b/index.html
@@ -1,14 +1,120 @@
-<!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>30分で作るホームページ</title>
+<title>就職活動メモ</title>
 </head>
 <body>
-	<h1>30分で作るホームページ</h1>
-	<p>初心者でも30分でホームページは作れます。難しいことは何もありません。まずはサクッと作って、流れをしっかり掴んでいきましょう</p>
-	<img src="test.jpg" alt="">
-	<a href="https://www.sejuku.net/blog/">解説していたブログはこちら</a>
+<h2>就職活動　メモ</h2>
+<br>
+<h3>動いている企業</h3>
+<table>
+<body>
+<table border="1">
+<tr>
+<td><center>優先順位</center></td>
+<td><center>企業名</center></td>
+<td><center>求人サイト名</center></td>
+<td><center>メモ1</center></td>
+<td><center>メモ2</center></td>
+</tr>
+<tr>
+<td><center>1</center></td>
+<td><center><a href="https://recruit.openhouse-group.com/career_specialist/diversity/">株式会社オープンハウス</center></a></td>
+<td width="140"><center>イントラ求人</center></td>
+<td width="280"><center>1月13日に面接で確定</center></td>
+<td><center></center></td>
+</tr>
+<tr>
+<td><center>2</center></td>
+<td><center><a href="https://www2.deloitte.com/jp/ja/pages/about-deloitte/articles/chlg/tohmatsu-challenged.html">トーマツチャレンジド株式会社</center></a></td>
+<td><center>イントラ求人</center></td>
+<td><center>応募に空きが出た場合<br>応募していく形で進める</center></td>
+<td><center></center></td>
+</tr>
+<tr>
+<td><center>3</center></td>
+<td><center>大樹生命保険株式会社</center></a></td>
+<td><center>ハローワーク求人</center></td>
+<td><center>現在書類は送付済み</center></td>
+<td><center></center></td>
+</tr>
+<td><center>4</center></td>
+<td><center>財務省</center></td>
+<td><center>イントラ求人</center></td>
+<td><center>見学可能か確認中</center></td>
+<td width="270"><center></center></td>
+</tr>
+<tr>
+<td><center>5</center></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td><center>6</center></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+</table>
+<h3>終わった企業</h3>
+<table>
+<body>
+<table border="1">
+<tr>
+<td><center>企業名</center></td>
+<td><center>求人サイト名</center></td>
+</tr>
+<tr>
+<td width="250"><center><a href="https://www.smbc-green.co.jp/recruit/faq.html">SMBCグリーンサービス株式会社</center></a></td>
+<td width="140"><center>ハローワーク求人</center></td>
+</tr>
+<tr>
+<td><center><a href="https://www.bell24.co.jp/ja/">株式会社ベルシステム24</center></a></td>
+<td><center>イントラ求人</center></td>
+</tr>
+<tr>
+<td><center></center></td>
+<td><center></center></td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+</tr>
+</table>
+<h3>辞めた企業</h3>
+<table>
+<body>
+<table border="1">
+<tr>
+<td><center>企業名</center></td>
+<td><center>求人サイト名</center></td>
+</tr>
+<tr>
+<td width="250"><center>パーソルチャレンジ株式会社</center></td>
+<td><center>イントラ求人</center></td>
+</tr>
+<tr>
+<td><center><a href="http://www.telecomedia.co.jp/">株式会社テレコメディア</center></a></td>
+<td><center>イントラ求人</center></td>
+</tr>
+<tr>
+<td><center></center></td>
+<td><center></center></td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+</tr>
+</table>
 </body>
 </html>
