--- a/index.html
+++ b/index.html
@@ -60,6 +60,23 @@
 <td></td>
 </tr>
 </table>
+<h3>その他動いているところ</h3>
+<table>
+<body>
+<table border="1">
+<tr>
+<td><center>番号</center></td>
+<td><center>企業名</center></td>
+<td><center>メモ1</center></td>
+</tr>
+<tr>
+<td><center>1</center></td>
+<td>チャレンジドオフィスかしわ</td>
+<td>1月6日までに結果をスタッフ」のほうに郵送</td>
+<td></td>
+<td></td>
+</tr>
+</table>
 <h3>終わった企業</h3>
 <table>
 <body>
