--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <tr>
 <td><center>1</center></td>
 <td>チャレンジドオフィスかしわ</td>
-<td>1月6日までに結果をスタッフ」のほうに郵送</td>
+<td>1月6日までに結果をスタッフのほうに郵送</td>
 </tr>
 </table>
 <h3>終わった企業</h3>
