--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <td><center>3</center></td>
 <td><center>財務省</center></td>
 <td><center>イントラ求人</center></td>
-<td><center>見学可能か確認中</center></td>
+<td><center>書類作成する形で進める</center></td>
 <td><center></center></td>
 </tr>
 <td><center>4</center></td>
