--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 </tr>
 <tr>
 <td><center>2</center></td>
-<td><center><a href="https://www2.deloitte.com/jp/ja/pages/about-deloitte/articles/chlg/tohmatsu-challenged.html">トーマツチャレンジド株式会社</center></a></td>
+<td><center>財務省</center></td>
 <td><center>イントラ求人</center></td>
-<td><center>応募に空きが出た場合<br>応募していく形で進める</center></td>
+<td><center>書類作成する形で進める</center></td>
 <td><center></center></td>
 </tr>
 <tr>
@@ -96,8 +96,8 @@
 <td><center>ハローワーク求人</center></td>
 </tr>
 <tr>
-<td></td>
-<td></td>
+<td><center><a href="https://www2.deloitte.com/jp/ja/pages/about-deloitte/articles/chlg/tohmatsu-challenged.html">トーマツチャレンジド株式会社</center></a></td>
+<td><center>イントラ求人</center></td>
 </tr>
 <tr>
 <td></td>
