--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 </tr>
 <tr>
 <td><center>3</center></td>
-<td><center>財務省</center></td>
-<td><center>イントラ求人</center></td>
-<td><center>書類作成する形で進める</center></td>
+<td><center></center></td>
+<td><center></center></td>
+<td><center></center></td>
 <td><center></center></td>
 </tr>
 <td><center>4</center></td>
