--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <td><center>3</center></td>
 <td><center></center></td>
 <td><center></center></td>
-<td><center></center></td>
+<td><center>チャレンジドの結果次第で<br>選考の進め方にも影響してくるため<br>一旦求人検索に関しては休止とする</center></td>
 <td><center></center></td>
 </tr>
 <td><center>4</center></td>
