--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 </tr>
 <tr>
 <td width="100"><center>1</center></td>
-<td width="240"><center><a href="https://recruit.openhouse-group.com/career_specialist/diversity/">株式会社オープンハウス</center></a></td>
+<td width="240">財務省</a></td>
 <td width="140"><center>イントラ求人</center></td>
-<td width="280"><center>1月13日に面接で確定</center></td>
+<td width="280"><center>書類添削中</center></td>
 <td wrdth<"20"><center></center></td>
 </tr>
 <tr>
 <td><center>2</center></td>
-<td><center>財務省</center></td>
+<td><center></center></td>
 <td><center>イントラ求人</center></td>
-<td><center>書類作成する形で進める</center></td>
+<td><center></center></td>
 <td><center></center></td>
 </tr>
 <tr>
@@ -100,8 +100,8 @@
 <td><center>イントラ求人</center></td>
 </tr>
 <tr>
-<td></td>
-<td></td>
+<td><center><a href="https://recruit.openhouse-group.com/career_specialist/diversity/">株式会社オープンハウス</center></td>
+<td>イントラ求人</td>
 </tr>
 </table>
 <h3>辞めた企業</h3>
