--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <tr>
 <td><center>2</center></td>
 <td><center></center></td>
-<td><center>イントラ求人</center></td>
+<td><center></center></td>
 <td><center></center></td>
 <td><center></center></td>
 </tr>
