--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 </tr>
 <tr>
 <td><center><a href="https://recruit.openhouse-group.com/career_specialist/diversity/">株式会社オープンハウス</center></td>
-<td>イントラ求人</td>
+  <td><center>イントラ求</center></td>
 </tr>
 </table>
 <h3>辞めた企業</h3>
