--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <td width="100"><center>1</center></td>
 <td width="240"><center>財務省</center></a></td>
 <td width="140"><center>イントラ求人</center></td>
-<td width="280"><center>書類添削中</center></td>
+<td width="280"><center>書類郵送済み</center></td>
 <td wrdth<"20"><center></center></td>
 </tr>
 <tr>
