--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 </tr>
 <tr>
 <td><center>2</center></td>
-<td><center></center></td>
-<td><center></center></td>
-<td><center></center></td>
+<td><center>桐和会グループ</center></td>
+<td><center>イントラ求人</center></td>
+<td><center>志望動機作成中</center></td>
 <td><center></center></td>
 </tr>
 <tr>
