--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
 <td><center>求人サイト名</center></td>
 </tr>
 <tr>
+<td><center>ポラスシェアード　株式会社</center></a></td>
+<td><center>イントラ求人</center></td>
+</tr>
+<tr>
 <td width="250"><center><a href="https://www.smbc-green.co.jp/recruit/faq.html">SMBCグリーンサービス株式会社</center></a></td>
 <td width="140"><center>ハローワーク求人</center></td>
 </tr>
