--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
 <td><center><a href="https://www.bell24.co.jp/ja/">株式会社ベルシステム24</center></a></td>
 <td><center>イントラ求人</center></td>
 </tr>
+  <tr>
+    <td><center>明治安田生命保険　相互会社</center></td>
+  </tr>
 <tr>
 <td><center>大樹生命保険株式会社</center></a></td>
 <td><center>ハローワーク求人</center></td>
