--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
 <td><center>ポラスシェアード　株式会社</center></a></td>
 <td><center>イントラ求人</center></td>
 </tr>
+  <td><center>川口信用金庫</center></td>
+  <td><center>ハローワーク求人</center></td>
+  <tr>
+    <td><center>フコク情報システム　株式会社</center></td>
+    <td><center>ハローワーク求人</center></td>
+  </tr>
 <tr>
 <td width="250"><center><a href="https://www.smbc-green.co.jp/recruit/faq.html">SMBCグリーンサービス株式会社</center></a></td>
 <td width="140"><center>ハローワーク求人</center></td>
