--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 </tr>
   <tr>
     <td><center>明治安田生命保険　相互会社</center></td>
+    <td><center>ハローワーク求人</center></td>
   </tr>
 <tr>
 <td><center>大樹生命保険株式会社</center></a></td>
