--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
 <td><center>ポラスシェアード　株式会社</center></a></td>
 <td><center>イントラ求人</center></td>
 </tr>
+  <tr>
+    <td><center>株式会社ＤＴＳパレット</center></td>
+    <td><center>ハローワーク求人</center></td>
+  </tr>
+  <tr>
   <td><center>川口信用金庫</center></td>
   <td><center>ハローワーク求人</center></td>
   <tr>
