--- a/index.html
+++ b/index.html
@@ -83,10 +83,26 @@
 <td><center>企業名</center></td>
 <td><center>求人サイト名</center></td>
 </tr>
+  <tr>
+    <td><center>旭情報サービス　株式会社</center></td>
+    <td><center>ハローワーク求人</center></td>
+  </tr>
+  <tr>
+    <td><center>株式会社　長谷工システムズ</center></td>
+    <td><center>ハローワーク求人</center></td>
+  </tr>
+  <tr>
+    <td><center>日本年金機構　千代田年金事務所</center></td>
+    <td><center>ハローワーク求人</center></td>
+  </tr>
 <tr>
 <td><center>ポラスシェアード　株式会社</center></a></td>
 <td><center>イントラ求人</center></td>
 </tr>
+  <tr>
+    <td><center>エイブリック株式会社</center></td>
+    <td><center>ハローワーク求人</center></td>
+  </tr>
   <tr>
     <td><center>株式会社ＤＴＳパレット</center></td>
     <td><center>ハローワーク求人</center></td>
