--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </tr>
 <tr>
 <td width="100"><center>1</center></td>
-<td width="260"><center>財務省</center></a></td>
+<td width="240"><center>財務省</center></a></td>
 <td width="140"><center>イントラ求人</center></td>
 <td width="280"><center>書類郵送済み</center></td>
 <td wrdth<"20"><center></center></td>
@@ -34,7 +34,7 @@
 </tr>
 <tr>
 <td><center>3</center></td>
-<td><center>株式会社ニチイ学館 柏支店（柏市立柏病院）</center></td>
+<td><center>株式会社ニチイ学館 柏支店<br>（柏市立柏病院）</center></td>
 <td><center>ハローワーク求人</center></td>
 <td><center>履歴書作成中</center></td>
 <td><center></center></td>
