--- a/index.html
+++ b/index.html
@@ -84,6 +84,23 @@
 <td><center>求人サイト名</center></td>
 </tr>
   <tr>
+    <td><center>株式会社　ゾフ</center></td>
+    <td><center>イントラ求人</center></td>
+  </tr>
+  <tr>
+    <td><center>株式会社　ジェイコムハート</center></td>
+    <td><center>イントラ求人</center></td>
+  </tr>
+  <tr>
+    <td><center>オリエンタルモーター　株式会社</center></td>
+    <td><center>ハローワーク求人</center></td>
+  </tr>
+  <td>
+    <tr>
+      <td><center>高田製薬株式会社</center></td>
+      <td><center>ハローワーク求人</center></td>
+    </tr>
+  <tr>
     <td><center>旭情報サービス　株式会社</center></td>
     <td><center>ハローワーク求人</center></td>
   </tr>
