--- a/index.html
+++ b/index.html
@@ -100,6 +100,14 @@
       <td><center>高田製薬株式会社</center></td>
       <td><center>ハローワーク求人</center></td>
     </tr>
+    <tr>
+      <td><center>富士ソフト企画　株式会社</center></td>
+      <td><center>ハローワーク求人</center></td>
+    </tr>
+    <tr>
+      <td><center>あいおいニッセイ同和損害保険株式会社</center></td>
+      <td><center>ハローワーク求人</center></td>
+    </tr>
   <tr>
     <td><center>旭情報サービス　株式会社</center></td>
     <td><center>ハローワーク求人</center></td>
