--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <td><center>3</center></td>
 <td><center>株式会社ニチイ学館 柏支店<br>（柏市立柏病院）</center></td>
 <td><center>ハローワーク求人</center></td>
-<td><center>紹介状取得済み</center></td>
+<td><center>書類郵送済み</center></td>
 <td><center></center></td>
 </tr>
 <td><center>4</center></td>
