--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 <td><center></center></td>
 </tr>
 <td><center>4</center></td>
-<td><center></center></td>
-<td><center></center></td>
-<td><center></center></td>
+<td><center>SMBC日興証券株式会社 </center></td>
+<td><center>クローバーナビ</center></td>
+<td><center>応募検討中</center></td>
 <td width="270"><center></center></td>
 </tr>
 <tr>
