--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <td><center>4</center></td>
 <td><center>SMBC日興証券株式会社 </center></td>
 <td><center>クローバーナビ</center></td>
-<td><center>応募検討中</center></td>
+<td><center>応募フォーム送信済み</center></td>
 <td width="270"><center></center></td>
 </tr>
 <tr>
